--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
+app.py
 ### Node Patch ###
 # Serverless Webpack directories
 .webpack/
